# totp-generator

./: CMakeLists.txt  README.md
cmake/libraries/: app.cmake  common.cmake  lmdb.cmake  lmdbxx.cmake  totp.cmake  utils.cmake
cmake/platform/: generic_builder.cmake  linux_builder.cmake  windows_builder.cmake
src/: main.cpp
src/app/application/: application.cpp  application.hpp
src/common/global/: global_names.hpp
src/utils/manager_singleton/: manager_singleton.hpp
src/utils/network_manager/: network_manager.cpp  network_manager.hpp
src/utils/notification_manager/: notification_manager.cpp  notification_manager.hpp
src/utils/option_manager/: option_manager.cpp  option_manager.hpp
src/utils/settings_manager/: settings_manager.cpp  settings_manager.hpp
src/utils/totp_manager/: totp_manager.cpp  totp_manager.hpp
